writer-reader/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: writer-reader-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: writer-reader
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 5000
